# coq-min-imports

./: .gitignore  OMakefile  README.md  Test.v  coq-min-imports.opam  coq_min_imports.ml  coq_min_imports.opam  dirtools.ml  dune  dune-project  flake.nix  jbuild  release.nix
test/: Test.v
