opam-version: "1.2"
maintainer: "lord@crocodile.org"
homepage: "https://github.com/vzaliva/coq-min-imports"
dev-repo: "https://github.com/vzaliva/coq-min-imports.git"
bug-reports: "https://github.com/vzaliva/coq-min-imports/issues"
authors: ["Vadim Zaliva"]
license: "MIT"
build: ["dune" "build" "-j" jobs "@install"]

depends: [
  "coq" {>= "8.5"}
  "extlib"
  "batteries"
  "dune" {build}
]
tags: [
  "category:Miscellaneous/Coq Extensions"
]
